manifests/2. Policies/2.x-microsegementation-tenant-update.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.tenant-hipstershop
spec:
  tier: security
  order: -50
  selector: tenant == "hipstershop"
  namespaceSelector: ""
  serviceAccountSelector: ""
  ingress:
    - action: Allow
      protocol: TCP
      source: {}
      destination:
        selector: app == "frontend"
        ports:
          - "8080"
    - action: Pass
      source: {}
      destination: {}
  egress:
    - action: Allow
      protocol: UDP
      source: {}
      destination:
        ports:
          - "53"
    - action: Pass
      source: {}
      destination: {}
  doNotTrack: false
  applyOnForward: false
  preDNAT: false
  types:
    - Ingress
    - Egress
